# jmie

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.llm/: JMIE_PRD.md
api/: .dockerignore  Dockerfile  pyproject.toml
api/core/: __init__.py
dags/: pyproject.toml
docs/: index.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
nlp/: pyproject.toml
scraper/: pyproject.toml
