[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmie-api"
version = "0.1.0"
description = "FastAPI REST API for JMIE - RAG query interface"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=0.41.0",
    "opentelemetry-instrumentation-fastapi>=0.41.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41.0",
    "opentelemetry-instrumentation-requests>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
