[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmie-dags"
version = "0.1.0"
description = "Apache Airflow DAG definitions for JMIE orchestration"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-amazon>=8.5.0",
    "apache-airflow-providers-postgres>=5.7.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.3.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
