[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmie-nlp"
version = "0.1.0"
description = "NLP processing layer for JMIE - NER, embeddings, model registry"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "mlflow>=2.8.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
]
