[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmie-scraper"
version = "0.1.0"
description = "Data ingestion layer for JMIE - web scrapers and normalization"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "langdetect>=1.0.9",
    "pydantic>=2.0.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "pytest-mock>=3.12.0",
]
